--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="emtyString" />
     <string name="add_new_note">Add new Note</string>
+    <string name="backmainscreen">backMainScreen</string>
 </resources>
