--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="emtyString" />
-    <string name="add_new_note">Add new Note</string>
+    <string name="add_new_note">Gösterilecek kayıtlı not bulunamadı.</string>
     <string name="backmainscreen">backMainScreen</string>
 </resources>
